2002-02-02 Terry Biggs <tbiggs@users.sourceforge.net>

	* added editor to gbs
	

2002-02-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* removed autosave option for personal comments editor (tmp??)


2002-01-31 Terry Biggs <tbiggs@users.sourceforge.net>

	* added some GBS support
	* added book viewer to main notebook w/ commentaries, note editor,
	  Interlinear page and studypad.
	* added book ctree to shortcutbar


2002-01-19 Terry Biggs <tbiggs@users.sourceforge.net>

	* changed ui - moved toolbars


2001-12-18 Terry Biggs <tbiggs@users.sourceforge.net>

	* added <clear Quickmarks> item to Quickmarks menu
	* removed quickmark editor (gs_listedtion.c)

2001-12-18 Terry Biggs <tbiggs@users.sourceforge.net>

	*  added gs_html_editor.*, gs_editor_replace.* and gs_editor_toolbar.* most of this code is 
	   from gtkhtml-1.0
	* removed printer.*  - now using gtk_html_print_with_header_footer for printing.
	* added html formatting to studypad and note editor using gtkhtml
	* global options stored for each module added modops.conf to ~/.GnomeSword for storing 
	  module options


2001-12-05 Terry Biggs <tbiggs@users.sourceforge.net>

	* added global options menu to viewtext dialog
	

2001-12-04 Terry Biggs <tbiggs@users.sourceforge.net>

	* bumped to release 0.7.0
	* now using SWORD MarkupFilterMgr
	
	
2001-11-25 Moses Mcknight<m-mcknight@users.sf.net>

	* added hpaned to search results
	

2001-11-06 Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed some problems with the shortcut bar
	* added menu item to module shortcut bars to add all modules to the shortcut bar
	

2001-11-03 Terry Biggs <tbiggs@users.sourceforge.net>

	* one more time - change look of search results - to give preview of verses found
	  using a clist for verse ref and verse preview.
	  

2001-11-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* Added two buttons to main toolbar - Footnotes and Morph Tags
	
	
2001-10-22 Terry Biggs <tbiggs@users.sourceforge.net>
